# AI-NRF1

./: .gitignore  Cargo.toml
.hypothesis/constants/: 04602a22a4b6e27d  d6d4aa58b2699c2e
.hypothesis/examples/04e6b3400353b141/: ea7fb64c3ffbb566
.hypothesis/examples/ea7fb64c3ffbb566/: 00de5cbe8d0e7385  11600eef2ae7fe4d  218fe7a9994839cf  2757086eb93cdc0c  2af799da699d1134  2ce9235c65812086  2e2b36a690329dd6  3937fa38fb860571  39c2adf83f767e4e  3c25ba4c59345d72  45383e85b01ad946  456ec269fb829c3c  4c638fabbf3a2cf3  50aa9867217f2876  555f9e5b77404d6c  598a9954051a83fc  5de3476dac7e4800  5ee1645eb9ef6c70  6c8c2975a7e63d3f  74d927d48e817127  7b10714dc132496f  8429bd1e90eb7c8a  8ac262730d53a594  94db6781ee396a77  9855e20707a63ea1  9dd71b66dc8a89c9  a1e5e15f1d6989af  add052d27769ba40  b30cf723aa9b2cb4  b32c21c9fbc1b98b  b7e30813f0368ed2  bfdb753c3b49cff5  d73f62ffa7bbdc0f  dc4a90cff34d24d4  e14d5782d2e21872  e26848b8bfda3f0f  e807d0fb0b6ec084  e9835a3100cc7806  f840eae3b92f14bd  f910e5f9446c3e49
_patch/specs/: nrf1.1-core.md
cli/ainrf1/: Cargo.toml
cli/ainrf1/src/: main.rs
cli/nrf1/: Cargo.toml
cli/nrf1/src/: main.rs
crates/envelope/: Cargo.toml
crates/envelope/src/: lib.rs
crates/nrf1/: Cargo.toml
crates/nrf1/src/: lib.rs
crates/reasoning-bit/: Cargo.toml
crates/reasoning-bit/src/: lib.rs
crates/receipt/src/: lib.rs
crates/sdk-rs/: Cargo.toml
crates/ubl-auth/src/: lib.rs
crates/ubl-json/: Cargo.toml
crates/ubl-json/src/: lib.rs
crates/ubl-model/src/: lib.rs
crates/ubl-policy/src/: lib.rs
crates/ubl-storage/: Cargo.toml
crates/ubl-storage/src/: lib.rs
crates/ubl-transport/: Cargo.toml
crates/ubl-transport/src/: lib.rs
docs/: GHOST_LIFECYCLE.md  MODULES_AND_NAMING.md  RELEASE_DRAFT_v0.3.9.md  SIRP_MIN_BASE.md  UBL_JSON.md  VERIFY_CHECKLIST.md
impl/rust/ai-nrf1/: Cargo.toml
impl/rust/ai-nrf1/src/: compat_cbor.rs  lib.rs
impl/rust/ai-nrf1/tests/: roundtrip.rs
impl/rust/nrf-core/: Cargo.toml
impl/rust/nrf-core/src/: lib.rs
impl/rust/nrf1-cli/: Cargo.toml
impl/rust/nrf1-cli/src/: main.rs
impl/rust/receipts/: Cargo.toml
impl/rust/receipts/src/: lib.rs
impl/rust/signers/: Cargo.toml
impl/rust/signers/src/: lib.rs
schemas/: ghost.v1.json  reasoning.bit.v1.1.json  reasoning.bit.v1.json
schemas/v1.1/: receipt.v1.json
services/registry/: Cargo.toml
services/registry/src/: main.rs
services/registry/src/middleware/: rbac.rs
services/registry/src/routes/: ghosts.rs  receipts.rs
specs/: NRF-1.1-Interop.md  NRF-1.1-LLM-First.md  NRF-1.1-in-LogLine.md  NRF-1.1-spec.md  NRF-1.1-test-vectors.md  NRF-1.1.md  NRF-Receipts.md  nrf1.1-json-mapping.md  nrf1.1-llm-guide.md  nrf1.1-security-considerations.md
tools/nrf1-cli/: Cargo.toml
tools/nrf1-cli/src/: judge.rs  main.rs
(+1 files in other folders)
