
[package]
name = "ainrf1"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nrf1 = { path = "../../crates/nrf1" }
ai-nrf1-sdk = { path = "../../crates/sdk-rs" }
receipt = { path = "../../crates/receipt" }
ed25519-dalek = "2"
rand = "0.8"
hex = "0.4"

zip = "0.6"
anyhow = "1"

flate2 = "1"
tar = "0.4"
sha2 = "0.10"

reqwest = { version = "0.11", features=["json", "rustls-tls"] }
tokio = { version = "1", features=["rt-multi-thread", "macros"] }

base64 = "0.22"
