
[package]
name = "ai_nrf1_receipts"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }

ai_nrf1_core = { path = "../nrf-core", package = "ai_nrf1_core" }
