
[package]
name = "signers"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ed25519-dalek = { version = "2", features = ["pkcs8"] }
rand_core = "0.6"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
anyhow = "1"
